# quartz

./: CMakeLists.txt  Dockerfile  README.md  flake.nix
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
Quartz/: CMakeLists.txt
Quartz/qml/: Card.qml
Quartz/src/: version.hpp
examples/: README.md
examples/demo/: CMakeLists.txt  README.md
examples/demo/assets/: demo.desktop
examples/demo/src/: main.cpp
examples/demo/src/Demo/: CMakeLists.txt  Main.qml  main.cpp
examples/demo/src/Demo/pages/: ChipPage.qml  IconsPage.qml  WavePage.qml
examples/demo/src/qml/: Main.qml
examples/demo/src/qml/pages/: CardPage.qml  ChipPage.qml  DropAreaPage.qml  IconsPage.qml  MiscellaneousPage.qml  RipplePage.qml  WavePage.qml
examples/fetchcontent/: CMakeLists.txt  README.md
examples/fetchcontent/src/: main.cpp
examples/fetchcontent/src/qml/: Main.qml
scripts/: build-appimage-podman.sh  build-appimage.sh  update-icons.sh
src/: CMakeLists.txt
src/Quartz/: CMakeLists.txt  Chip.qml  IconButton.qml  Icons.qml  Spacer.qml  Wave.qml  version.cpp
src/Quartz/qml/: Card.qml  Chip.qml  ChipFlow.qml  DragArea.qml  DropArea.qml  FloatingActionButton.qml  Icon.qml  IconButton.qml  Search.qml  Snackbar.qml  Wave.qml
src/Quartz/quartz/: codepoints.cpp  getopts.cpp  getopts.hpp  macros.hpp  quartz.cpp  quartz.hpp  signals.cpp  signals.hpp  version.cpp
src/qml/Quartz/: AppWindow.qml  CMakeLists.txt  CheckChip.qml  Chip.qml  ChipFlow.qml  ComboChip.qml  DropArea.qml  FloatingActionButton.qml  Icons.qml  Ripple.qml  Search.qml  Wave.qml
src/quartz/: codepoints.cpp  codepoints.hpp  getopts.cpp  macros.hpp  quartz.hpp  signals.cpp  util.cpp  util.hpp  version.hpp
